--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "passport-google-oauth": "~0.1.5",
     "connect-flash": "~0.1.1",
     "bcrypt-nodejs": "latest",
-    "request": "*"
+    "request": "*",
+    "async": "*"
   },
   "scripts": {
     "start": "node server.js"
