--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "express": "~3.4.4",
     "mongoose": "~3.8.1",
     "passport": "~0.1.17",
+    "passport-oauth": "~1.0.0",
+    "passport-linkedin": "~0.1.3",
     "passport-local": "~0.1.6",
     "passport-facebook": "~1.0.2",
     "passport-twitter": "~1.0.2",
