--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "express": "~3.4.4",
     "mongoose": "~3.8.1",
+    "safe_datejs": "~0.0.1",
     "passport": "~0.1.17",
     "passport-oauth": "~1.0.0",
     "passport-linkedin": "~0.1.3",
