--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "coveralls": "~2.7.1"
   },
   "scripts": {
-    "test": "make test",
+    "test": "NODE_ENV=test make test",
     "start": "node server.js",
     "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --reporter=mocha-istanbul test/**/*.js",
     "coveralls": "npm run-script coverage && ./node_modules/.bin/coveralls.js < coverage/lcov.info"
