--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "bcrypt-nodejs": "latest",
     "request": "*",
     "async": "*",
-    "skynet": "*"
+    "skynet": "*",
+    "mongoose-slug": "~1.2.0",
+    "mongoose-timestamps": "0.0.1"
   },
   "devDependencies": {
     "mocha-istanbul": "~0.2.0",
