--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "async": "*",
     "skynet": "*",
     "mongoose-slug": "~1.2.0",
-    "mongoose-timestamps": "0.0.1"
+    "mongoose-timestamps": "0.0.1",
+    "lodash-node": "~2.4.1",
+    "mongoose-pagination": "~1.0.0"
   },
   "devDependencies": {
     "mocha-istanbul": "~0.2.0",
