--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mongoose-slug": "~1.2.0",
     "mongoose-timestamps": "0.0.1",
     "lodash-node": "~2.4.1",
-    "mongoose-pagination": "~1.0.0"
+    "mongoose-pagination": "~1.0.0",
+    "marked": "^0.3.1"
   },
   "devDependencies": {
     "mocha-istanbul": "~0.2.0",
