--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "mongoose-timestamps": "0.0.1",
     "lodash-node": "~2.4.1",
     "mongoose-pagination": "~1.0.0",
-    "marked": "^0.3.1"
+    "marked": "*"
   },
   "devDependencies": {
     "mocha-istanbul": "~0.2.0",
