--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mongoose": "~3.8.1",
     "safe_datejs": "~0.0.1",
     "oauth": "~0.9.11",
+    "simple-oauth2": "~0.1.9",
     "passport": "~0.1.17",
     "passport-http-oauth": "~0.1.3",
     "passport-oauth": "~1.0.0",
