added elastic search

--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "mongoose-timestamps": "0.0.1",
     "lodash-node": "~2.4.1",
     "mongoose-pagination": "~1.0.0",
-    "marked": "*"
+    "marked": "*",
+    "elasticsearch": "*"
+
   },
   "devDependencies": {
     "mocha-istanbul": "~0.2.0",
