split up server api's.

--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "mongoose-timestamps": "0.0.1",
     "lodash-node": "~2.4.1",
     "mongoose-pagination": "~1.0.0",
-    "marked": "*"
-
+    "marked": "*",
+    "underscore": "~1.6.0"
   },
   "devDependencies": {
     "mocha-istanbul": "~0.2.0",
