--- a/package.json
+++ b/package.json
@@ -5,38 +5,39 @@
   "main": "server.js",
   "author": "Chris Matthieu",
   "dependencies": {
-    "express": "~3.4.4",
-    "mongoose": "~3.8.1",
-    "safe_datejs": "~0.0.1",
-    "oauth": "~0.9.11",
-    "simple-oauth2": "~0.1.9",
-    "passport": "~0.1.17",
-    "passport-http-oauth": "~0.1.3",
-    "passport-oauth": "~1.0.0",
-    "passport-linkedin": "~0.1.3",
-    "passport-local": "~0.1.6",
-    "passport-facebook": "~1.0.2",
-    "passport-twitter": "~1.0.2",
-    "passport-google-oauth": "~0.1.5",
-    "passport-readability": "~0.1.2",
-    "passport-stackexchange": "~0.1.0",
-    "passport-bitly": "~0.1.0",
-    "passport-vimeo": "~0.1.2",
-    "passport-foursquare": "~0.1.3",
-    "passport-tumblr": "~0.1.2",
-    "passport-fitbit": "~0.1.2",
-    "passport-rdio": "~0.1.2",
-    "connect-flash": "~0.1.1",
-    "bcrypt-nodejs": "latest",
-    "request": "*",
     "async": "*",
-    "skynet": "*",
+    "bcrypt-nodejs": "latest",
+    "connect-flash": "~0.1.1",
+    "express": "~3.4.4",
+    "lodash-node": "~2.4.1",
+    "marked": "*",
+    "mongoose": "~3.8.1",
+    "mongoose-pagination": "~1.0.0",
     "mongoose-slug": "~1.2.0",
     "mongoose-timestamps": "0.0.1",
-    "lodash-node": "~2.4.1",
-    "mongoose-pagination": "~1.0.0",
-    "marked": "*"
-
+    "oauth": "~0.9.11",
+    "passport": "~0.1.17",
+    "passport-bitly": "~0.1.0",
+    "passport-facebook": "~1.0.2",
+    "passport-fitbit": "~0.1.2",
+    "passport-foursquare": "~0.1.3",
+    "passport-google-oauth": "~0.1.5",
+    "passport-http-oauth": "~0.1.3",
+    "passport-linkedin": "~0.1.3",
+    "passport-local": "~0.1.6",
+    "passport-oauth": "~1.0.0",
+    "passport-rdio": "~0.1.2",
+    "passport-readability": "~0.1.2",
+    "passport-stackexchange": "~0.1.0",
+    "passport-tumblr": "~0.1.2",
+    "passport-twitter": "~1.0.2",
+    "passport-vimeo": "~0.1.2",
+    "request": "*",
+    "rest": "^1.0.3",
+    "safe_datejs": "~0.0.1",
+    "simple-oauth2": "~0.1.9",
+    "skynet": "*",
+    "when": "^3.0.1"
   },
   "devDependencies": {
     "mocha-istanbul": "~0.2.0",
