--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "passport-tumblr": "~0.1.2",
     "passport-twitter": "~1.0.2",
     "passport-vimeo": "~0.1.2",
+    "passport-facebook": "^1.0.3",
+    "passport-google-oauth": "^0.1.5",
+    "passport-bitly": "^0.1.0",
+    "passport-foursquare": "^1.0.0",
+    "passport-fitbit": "^0.1.2",
     "request": "*",
     "rest": "^1.0.3",
     "skynet": "*",
