--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "cors": "*",
     "node-uuid": "*",
     "mocha": "^1.18.2",
-    "q": "^1.0.1"
+    "q": "^1.0.1",
+    "lodash": "^2.4.1"
   },
   "devDependencies": {
     "mocha-istanbul": "~0.2.0",
