--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "node-uuid": "*",
     "mocha": "^1.18.2",
     "q": "^1.0.1",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "should": "^3.3.1"
   },
   "devDependencies": {
     "mocha-istanbul": "~0.2.0",
