--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "q": "^1.0.1",
     "lodash": "^2.4.1",
     "should": "^3.3.1",
-    "nodemailer": "^0.6.3"
+    "nodemailer": "^0.6.3",
+    "jade": "^1.3.1"
   },
   "devDependencies": {
     "mocha-istanbul": "~0.2.0",
