--- a/package.json
+++ b/package.json
@@ -8,14 +8,31 @@
     "async": "*",
     "bcrypt-nodejs": "latest",
     "connect-flash": "~0.1.1",
+    "cors": "*",
     "express": "~3.4.4",
-    "mongoose": "~3.8.8",
-    "oauth": "~0.9.11",
-    "mongojs": "~0.10.1",
-    "safe_datejs": "~0.0.1",
+    "jade": "^1.3.1",
+    "jasmine-core": "^2.0.0",
+    "karma": "^0.12.14",
+    "karma-chrome-launcher": "^0.1.3",
+    "karma-jasmine": "^0.1.5",
+    "lodash": "^2.4.1",
+    "lodash-node": "~2.4.1",
+    "marked": "*",
     "moment": "~2.5.1",
-    "simple-oauth2": "~0.1.9",
+    "mongojs": "~0.10.1",
+    "mongoose": "~3.8.8",
+    "mongoose-pagination": "~1.0.0",
+    "mongoose-slug": "~1.2.0",
+    "mongoose-timestamps": "0.0.1",
+    "node-uuid": "*",
+    "nodemailer": "^0.6.3",
+    "oauth": "~0.9.11",
     "passport": "~0.1.17",
+    "passport-bitly": "^0.1.0",
+    "passport-facebook": "^1.0.3",
+    "passport-fitbit": "^0.1.2",
+    "passport-foursquare": "^1.0.0",
+    "passport-google-oauth": "^0.1.5",
     "passport-http-oauth": "~0.1.3",
     "passport-linkedin": "~0.1.3",
     "passport-local": "~0.1.6",
@@ -26,29 +43,15 @@
     "passport-tumblr": "~0.1.2",
     "passport-twitter": "~1.0.2",
     "passport-vimeo": "~0.1.2",
-    "passport-facebook": "^1.0.3",
-    "passport-google-oauth": "^0.1.5",
-    "passport-bitly": "^0.1.0",
-    "passport-foursquare": "^1.0.0",
-    "passport-fitbit": "^0.1.2",
+    "q": "^1.0.1",
     "request": "*",
     "rest": "^1.0.3",
-    "skynet": "*",
-    "when": "^3.0.1",
-    "mongoose-slug": "~1.2.0",
-    "mongoose-timestamps": "0.0.1",
-    "lodash-node": "~2.4.1",
-    "mongoose-pagination": "~1.0.0",
-    "marked": "*",
-    "underscore": "~1.6.0",
-    "cors": "*",
-    "node-uuid": "*",
-    "mocha": "^1.18.2",
-    "q": "^1.0.1",
-    "lodash": "^2.4.1",
+    "safe_datejs": "~0.0.1",
     "should": "^3.3.1",
-    "nodemailer": "^0.6.3",
-    "jade": "^1.3.1"
+    "simple-oauth2": "~0.1.9",
+    "skynet": "*",
+    "underscore": "~1.6.0",
+    "when": "^3.0.1"
   },
   "devDependencies": {
     "mocha-istanbul": "~0.2.0",
@@ -56,7 +59,11 @@
     "chai": "~1.9.0",
     "mocha": "~1.17.1",
     "istanbul": "~0.2.4",
-    "coveralls": "~2.7.1"
+    "coveralls": "~2.7.1",
+    "karma": "^0.12.14",
+    "karma-chrome-launcher": "^0.1.3",
+    "karma-jasmine": "^0.1.5",
+    "jasmine-core": "^2.0.0"
   },
   "scripts": {
     "test": "NODE_ENV=test make test",
