--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "bcrypt-nodejs": "latest",
     "connect-flash": "~0.1.1",
     "cors": "*",
-    "express": "~3.4.4",
+    "coveralls": "^2.7.1",
+    "express": "^3.4.8",
     "jade": "^1.3.1",
     "jasmine-core": "^2.0.0",
     "karma": "^0.12.14",
@@ -18,16 +19,17 @@
     "lodash": "^2.4.1",
     "lodash-node": "~2.4.1",
     "marked": "*",
-    "moment": "~2.5.1",
-    "mongojs": "~0.10.1",
+    "mocha": "^1.17.1",
+    "moment": "^2.5.1",
+    "mongojs": "^0.10.1",
     "mongoose": "~3.8.8",
     "mongoose-pagination": "~1.0.0",
-    "mongoose-slug": "~1.2.0",
+    "mongoose-slug": "^1.2.0",
     "mongoose-timestamps": "0.0.1",
     "node-uuid": "*",
     "nodemailer": "^0.6.3",
     "oauth": "~0.9.11",
-    "passport": "~0.1.17",
+    "passport": "^0.1.18",
     "passport-bitly": "^0.1.0",
     "passport-facebook": "^1.0.3",
     "passport-fitbit": "^0.1.2",
@@ -35,7 +37,7 @@
     "passport-google-oauth": "^0.1.5",
     "passport-http-oauth": "~0.1.3",
     "passport-linkedin": "~0.1.3",
-    "passport-local": "~0.1.6",
+    "passport-local": "^0.1.6",
     "passport-oauth": "~1.0.0",
     "passport-rdio": "~0.1.2",
     "passport-readability": "~0.1.2",
@@ -54,16 +56,17 @@
     "when": "^3.0.1"
   },
   "devDependencies": {
-    "mocha-istanbul": "~0.2.0",
-    "mocha-lcov-reporter": "0.0.1",
     "chai": "~1.9.0",
-    "mocha": "~1.17.1",
-    "istanbul": "~0.2.4",
     "coveralls": "~2.7.1",
+    "istanbul": "~0.2.4",
+    "jasmine-core": "^2.0.0",
+    "jasmine-node": "^1.14.3",
     "karma": "^0.12.14",
     "karma-chrome-launcher": "^0.1.3",
     "karma-jasmine": "^0.1.5",
-    "jasmine-core": "^2.0.0"
+    "mocha": "~1.17.1",
+    "mocha-istanbul": "~0.2.0",
+    "mocha-lcov-reporter": "0.0.1"
   },
   "scripts": {
     "test": "NODE_ENV=test make test",
