--- a/public/assets/javascripts/bootstrap-switch/bower.json
+++ b/public/assets/javascripts/bootstrap-switch/bower.json
@@ -3,11 +3,21 @@
   "description": "Turn checkboxes and radio buttons in toggle switches.",
   "version": "3.0.0",
   "main": [
-    "build/js/bootstrap-switch.js",
-    "build/css/bootstrap3/bootstrap-switch.css"
+    "dist/js/bootstrap-switch.js",
+    "dist/css/bootstrap3/bootstrap-switch.css"
   ],
   "ignore": [
-    "docs"
+    "docs",
+    "test",
+    "src",
+    "CNAME",
+    "coffeelint.json",
+    "composer.json",
+    "CONTRIBUTING.md",
+    "gulpfile.coffee",
+    "gulpfile.js",
+    "index.html",
+    "package.json"
   ],
   "dependencies": {
     "jquery": ">=1.9.0"
