--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "connect-flash": "~0.1.1",
     "cors": "*",
     "coveralls": "^2.7.1",
-    "express": "^3.4.8",
+    "express": "~3.4.8",
     "jade": "^1.3.1",
     "jasmine-core": "^2.0.0",
     "karma": "^0.12.14",
