--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "async": "*",
     "bcrypt-nodejs": "latest",
+    "bower": "^1.3.3",
     "connect-flash": "~0.1.1",
     "cors": "*",
     "coveralls": "^2.7.1",
