Adding bower dependency management to octoblu

--- a/bower.json
+++ b/bower.json
@@ -22,5 +22,25 @@
     "test",
     "tests",
     "design"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "~2.1.1",
+    "angular": "~1.2.16",
+    "angular-animate": "~1.2.16",
+    "angular-sanitize": "~1.2.16",
+    "angular-cookies": "~1.2.16",
+    "angular-resource": "~1.2.16",
+    "jquery-ui": "~1.10.4",
+    "angular-ui-router": "~0.2.10",
+    "modernizr": "~2.8.2",
+    "bootstrap": "~3.1.1",
+    "fontawesome": "Font-Awesome#4.1.0",
+    "angular-ui-bootstrap": "~0.11.0",
+    "angular-ui-utils": "~0.1.1",
+    "underscore": "~1.6.0",
+    "d3": "~3.4.8",
+    "nvd3": "~1.1.15-beta",
+    "jquery-migrate": "~1.2.1",
+    "bootstrap-switch": "~3.0.1"
+  }
 }
