--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "octoblu",
-  "version": "0.0.1-7",
+  "version": "0.2.2-alpha",
   "description": "octoblu.com",
   "main": "server.js",
   "author": "Chris Matthieu",
