Updated bower dependencies and added bower dependencies to index.html

--- a/bower.json
+++ b/bower.json
@@ -35,11 +35,9 @@
     "bootstrap": "~3.1.1",
     "fontawesome": "Font-Awesome#4.1.0",
     "angular-ui-router": "~0.2.10",
-    "angular-ui-bootstrap": "~0.11.0",
     "angular-ui-utils": "~0.1.1",
     "underscore": "~1.6.0",
     "d3": "~3.4.8",
-    "nvd3": "~1.1.15-beta",
     "jquery-migrate": "~1.2.1",
     "bootstrap-switch": "~3.0.1",
     "angular-bootstrap": "~0.11.0",
@@ -50,6 +48,9 @@
     "skrollr": "~0.6.25",
     "isotope": "~2.0.0",
     "angular-google-analytics": "~0.0.2",
-    "jquery-mobile": "~1.4.2"
+    "jquery-mobile": "~1.4.2",
+    "requirejs": "~2.1.13",
+    "owl.carousel": "*",
+    "nvd3": "~1.1.15-beta"
   }
 }
