--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "lodash": "^2.4.1",
     "lodash-node": "~2.4.1",
     "marked": "*",
-    "mocha": "^1.17.1",
     "moment": "^2.5.1",
     "mongojs": "^0.10.1",
     "mongoose": "~3.8.12",
@@ -59,22 +58,15 @@
   },
   "devDependencies": {
     "chai": "~1.9.0",
-    "coveralls": "~2.7.1",
-    "istanbul": "~0.2.4",
     "jasmine-core": "^2.0.0",
     "jasmine-node": "^1.14.3",
     "karma": "^0.12.14",
     "karma-chrome-launcher": "^0.1.3",
-    "karma-jasmine": "^0.1.5",
-    "mocha": "~1.17.1",
-    "mocha-istanbul": "~0.2.0",
-    "mocha-lcov-reporter": "0.0.1"
+    "karma-jasmine": "^0.1.5"
   },
   "scripts": {
     "test": "NODE_ENV=test make test",
-    "start": "node server.js",
-    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --reporter=mocha-istanbul test/**/*.js",
-    "coveralls": "npm run-script coverage && ./node_modules/.bin/coveralls.js < coverage/lcov.info"
+    "start": "node server.js"
   },
   "engines": {
     "node": ">=0.6"
