--- a/bower.json
+++ b/bower.json
@@ -64,5 +64,10 @@
     "jquery-easing": "*",
     "flexslider": "*",
     "jquery.videoBG": "*"
+  },
+  "resolutions": {
+    "jquery-ui": "~1.10.4",
+    "jquery": "~2.1.1",
+    "d3": "~3.3.13"
   }
 }
