--- a/bower.json
+++ b/bower.json
@@ -63,7 +63,8 @@
     "supersized": "*",
     "jquery-easing": "*",
     "flexslider": "*",
-    "jquery.videoBG": "*"
+    "jquery.videoBG": "*",
+    "angular-schema-form": "*"
   },
   "resolutions": {
     "jquery-ui": "~1.10.4",
