Refactored device property editing into  a directive that can be reused  in pages where device property edits are needed.

--- a/bower.json
+++ b/bower.json
@@ -63,8 +63,7 @@
     "supersized": "*",
     "jquery-easing": "*",
     "flexslider": "*",
-    "jquery.videoBG": "*",
-    "angular-schema-form": "*"
+    "jquery.videoBG": "*"
   },
   "resolutions": {
     "jquery-ui": "~1.10.4",
