--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "octoblu",
-  "version": "0.4.1-alpha",
+  "version": "0.4.2",
   "description": "octoblu.com",
   "main": "server.js",
   "author": "Chris Matthieu",
