--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose-timestamps": "0.0.1",
     "node-uuid": "*",
     "nodemailer": "^0.6.3",
+    "npm": "~1.4.19",
     "oauth": "~0.9.11",
     "passport": "~0.2.0",
     "passport-bitly": "^0.1.0",
