Freeform Search returns - not paginated

--- a/bower.json
+++ b/bower.json
@@ -49,6 +49,7 @@
     "angular-google-analytics": "~0.0.2",
     "jquery-mobile": "~1.4.2",
     "nvd3": "~1.1.15-beta",
+    "ng-table":"~0.3.3",
     "lodash": "~2.4.1",
     "socket.io": "~1.0.6",
     "socket.io-client": "~1.0.6"
