--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cors": "*",
     "coveralls": "^2.7.1",
     "express": "~3.4.8",
-    "gulp": "^3.6.2",
+    "gulp": "~3.8.6",
     "jade": "^1.3.1",
     "jasmine-core": "^2.0.0",
     "karma": "^0.12.14",
@@ -56,10 +56,11 @@
     "simple-oauth2": "~0.1.9",
     "skynet": "*",
     "underscore": "~1.6.0",
-    "when": "^3.0.1"
+    "when": "^3.0.1",
+    "gulp-concat": "~2.3.3",
+    "gulp-less": "~1.3.1"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "NODE_ENV=test make test",
     "start": "node server.js"
