--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "octoblu",
-  "version": "0.5.0",
+  "version": "0.4.6",
   "description": "octoblu.com",
   "main": "server.js",
   "author": "Chris Matthieu",
@@ -57,14 +57,10 @@
     "gulp-less": "~1.3.1"
   },
   "devDependencies": {
-    "sinon-chai": "~2.5.0",
-    "chai": "~1.9.1",
-    "sinon": "~1.10.3",
-    "mocha": "~1.20.1",
-    "angular": "~1.2.19"
+    "gulp": "~3.8.6"
   },
   "scripts": {
-    "test": "mocha --require test/test_helper.js --recursive --reporter spec",
+    "test": "NODE_ENV=test make test",
     "start": "node server.js"
   },
   "engines": {
