--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "gulp-concat": "~2.3.3",
     "gulp-less": "~1.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gulp": "~3.8.6"
+  },
   "scripts": {
     "test": "NODE_ENV=test make test",
     "start": "node server.js"
