--- a/bower.json
+++ b/bower.json
@@ -46,15 +46,14 @@
     "smoothie": "https://github.com/joewalnes/smoothie.git",
     "angular-google-analytics": "~0.0.2",
     "nvd3": "~1.1.15-beta",
-    "ng-table":"~0.3.3",
-    "angularjs-nvd3-directives":"~0.0.7",
+    "ng-table": "~0.3.3",
+    "angularjs-nvd3-directives": "~0.0.7",
     "lodash": "~2.4.1",
     "socket.io": "~1.0.6",
     "socket.io-client": "~1.0.6"
   },
   "resolutions": {
     "jquery-ui": "~1.10.4",
-    "jquery": "~2.1.1",
-    "d3": "~3.3.13"
+    "jquery": "~2.1.1"
   }
 }
