--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "connect-flash": "~0.1.1",
     "cors": "*",
     "coveralls": "^2.7.1",
-    "express": "~3.4.8",
+    "express": "~4.6.1",
     "gulp": "~3.8.6",
     "jade": "^1.3.1",
     "lodash": "^2.4.1",
@@ -54,7 +54,11 @@
     "underscore": "~1.6.0",
     "when": "^3.0.1",
     "gulp-concat": "~2.3.3",
-    "gulp-less": "~1.3.1"
+    "gulp-less": "~1.3.1",
+    "cookie-parser": "~1.3.2",
+    "morgan": "~1.2.0",
+    "express-session": "~1.6.5",
+    "body-parser": "~1.5.0"
   },
   "devDependencies": {
     "gulp": "~3.8.6"
