--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
   "dependencies": {
     "async": "*",
     "bcrypt-nodejs": "latest",
+    "body-parser": "~1.5.0",
     "bower": "^1.3.3",
     "browserify": "^4.2.0",
     "connect-flash": "~0.1.1",
+    "connect-redis": "^2.0.0",
+    "cookie-parser": "~1.3.2",
     "cors": "*",
     "coveralls": "^2.7.1",
     "express": "~4.6.1",
+    "express-session": "~1.6.5",
     "gulp": "~3.8.6",
+    "gulp-concat": "~2.3.3",
+    "gulp-less": "~1.3.1",
     "jade": "^1.3.1",
     "lodash": "^2.4.1",
     "lodash-node": "~2.4.1",
@@ -24,6 +30,7 @@
     "mongoose-pagination": "~1.0.0",
     "mongoose-slug": "^1.2.0",
     "mongoose-timestamps": "0.0.1",
+    "morgan": "~1.2.0",
     "node-uuid": "*",
     "nodemailer": "^0.6.3",
     "npm": "~1.4.19",
@@ -52,13 +59,7 @@
     "simple-oauth2": "~0.1.9",
     "skynet": "*",
     "underscore": "~1.6.0",
-    "when": "^3.0.1",
-    "gulp-concat": "~2.3.3",
-    "gulp-less": "~1.3.1",
-    "cookie-parser": "~1.3.2",
-    "morgan": "~1.2.0",
-    "express-session": "~1.6.5",
-    "body-parser": "~1.5.0"
+    "when": "^3.0.1"
   },
   "devDependencies": {
     "gulp": "~3.8.6"
