--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - "0.10"
+cache:
+  directories:
+    - node_modules
 deploy:
   provider: opsworks
   access_key_id: AKIAJCOOWS3NWOOZRDGQ
