--- a/bower.json
+++ b/bower.json
@@ -57,5 +57,8 @@
     "jquery-ui": "~1.10.4",
     "jquery": "~2.1.1",
     "d3": "~3.4.8"
+  },
+  "devDependencies": {
+    "chai": "~1.9.1"
   }
 }
