--- a/package.json
+++ b/package.json
@@ -64,7 +64,10 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
-    "gulp": "~3.8.6"
+    "gulp": "~3.8.6",
+    "karma": "~0.12.17",
+    "karma-mocha": "~0.1.6",
+    "karma-phantomjs-launcher": "~0.1.4"
   },
   "scripts": {
     "test": "NODE_ENV=test make test",
