--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,21 @@ cache:
   directories:
     - node_modules
 deploy:
-  provider: opsworks
-  access_key_id: AKIAJCOOWS3NWOOZRDGQ
-  secret_access_key:
-    secure: KOR29IukG7svfdwoHmPMUrAg+gO7NFmSX6Th6lbar6vPlQkFr59xtLFyMJE2LVYWS0CYPQPMhxSN1oFM+tnYoDNMAX31Q8ZC6theW4UbJIjrNBadzq8FH2OWTvFUHv2UGEcmndTBl+x4VW1wKwy72pAzQ6mCl2+B9viUYRbp7Tg=
-  app-id: 42f87aa6-8b69-47d5-b2a3-dcc9511281be
-  on:
-    repo: octoblu/octoblu
+  - provider: s3
+    access_key_id: AKIAJCOOWS3NWOOZRDGQ
+    secret_access_key:
+      secure: KOR29IukG7svfdwoHmPMUrAg+gO7NFmSX6Th6lbar6vPlQkFr59xtLFyMJE2LVYWS0CYPQPMhxSN1oFM+tnYoDNMAX31Q8ZC6theW4UbJIjrNBadzq8FH2OWTvFUHv2UGEcmndTBl+x4VW1wKwy72pAzQ6mCl2+B9viUYRbp7Tg=
+    bucket: deploy-octoblu-static
+    skip_cleanup: true
+    on:
+      branch: release
+  - provider: opsworks
+    access_key_id: AKIAJCOOWS3NWOOZRDGQ
+    secret_access_key:
+      secure: KOR29IukG7svfdwoHmPMUrAg+gO7NFmSX6Th6lbar6vPlQkFr59xtLFyMJE2LVYWS0CYPQPMhxSN1oFM+tnYoDNMAX31Q8ZC6theW4UbJIjrNBadzq8FH2OWTvFUHv2UGEcmndTBl+x4VW1wKwy72pAzQ6mCl2+B9viUYRbp7Tg=
+    app-id: 42f87aa6-8b69-47d5-b2a3-dcc9511281be
+    on:
+      repo: octoblu/octoblu
 branches:
   only:
     - master
