--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
 cache:
   directories:
     - node_modules
+    - vendor/bundle
+before_deploy: "mkdir dist && tar czf dist/static.tar.gz public"
 deploy:
   - provider: s3
     access_key_id: AKIAJCOOWS3NWOOZRDGQ
@@ -12,6 +14,7 @@ deploy:
     bucket: deploy-octoblu-static
     region: us-west-2
     skip_cleanup: true
+    local-dir: dist
     on:
       branch: master
   - provider: opsworks
@@ -19,6 +22,13 @@ deploy:
     secret_access_key:
       secure: KOR29IukG7svfdwoHmPMUrAg+gO7NFmSX6Th6lbar6vPlQkFr59xtLFyMJE2LVYWS0CYPQPMhxSN1oFM+tnYoDNMAX31Q8ZC6theW4UbJIjrNBadzq8FH2OWTvFUHv2UGEcmndTBl+x4VW1wKwy72pAzQ6mCl2+B9viUYRbp7Tg=
     app-id: 42f87aa6-8b69-47d5-b2a3-dcc9511281be
+    on:
+      repo: octoblu/octoblu
+  - provider: opsworks
+    access_key_id: AKIAJCOOWS3NWOOZRDGQ
+    secret_access_key:
+      secure: KOR29IukG7svfdwoHmPMUrAg+gO7NFmSX6Th6lbar6vPlQkFr59xtLFyMJE2LVYWS0CYPQPMhxSN1oFM+tnYoDNMAX31Q8ZC6theW4UbJIjrNBadzq8FH2OWTvFUHv2UGEcmndTBl+x4VW1wKwy72pAzQ6mCl2+B9viUYRbp7Tg=
+    app-id: 6829c218-74d9-4ff4-a7dc-9b5f810a05fe
     on:
       repo: octoblu/octoblu
 branches:
