--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
   },
   "scripts": {
     "test": "NODE_ENV=test make test",
-    "start": "node server.js",
+    "start": "node server.js"
   },
   "engines": {
     "node": ">=0.6"
