Add new method to overwrite or insert api records on user

--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "karma-phantomjs-launcher": "~0.1.4"
   },
   "scripts": {
-    "test": "NODE_ENV=test make test",
+    "test": "mocha -r test/test_helper.js --recursive test/models",
     "start": "node server.js"
   },
   "engines": {
