--- a/package.json
+++ b/package.json
@@ -65,7 +65,9 @@
     "gulp-less": "~1.3.1",
     "karma": "~0.12.17",
     "karma-mocha": "~0.1.6",
-    "karma-phantomjs-launcher": "~0.1.4"
+    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-spec-reporter": "0.0.13",
+    "karma-growl-reporter": "~0.1.1"
   },
   "scripts": {
     "test": "mocha -r test/test_helper.js --recursive --reporter spec test/models test/controllers && karma start --single-run",
