--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "karma-growl-reporter": "~0.1.1",
     "karma-mocha": "~0.1.6",
     "karma-phantomjs-launcher": "~0.1.4",
+    "karma-sinon-chai": "^0.2.0",
     "karma-spec-reporter": "0.0.13",
     "sinon": "^1.10.3",
     "sinon-chai": "^2.5.0"
