--- a/bower.json
+++ b/bower.json
@@ -42,7 +42,8 @@
     "lodash": "~2.4.1",
     "socket.io": "~1.0.6",
     "socket.io-client": "~1.0.6",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "angular-ui-ace": "~0.1.1"
   },
   "resolutions": {
     "d3": "~3.4.8",
