--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "karma-sinon-chai": "^0.2.0",
     "karma-spec-reporter": "0.0.13",
     "sinon": "^1.10.3",
-    "sinon-chai": "^2.5.0"
+    "sinon-chai": "^2.5.0",
+    "karma-ng-html2js-preprocessor": "~0.1.0"
   },
   "scripts": {
     "test": "mocha -r test/test_helper.js --recursive --reporter spec test/models test/controllers && node_modules/karma/bin/karma start --single-run",
