--- a/bower.json
+++ b/bower.json
@@ -43,7 +43,8 @@
     "socket.io": "~1.0.6",
     "socket.io-client": "~1.0.6",
     "bootstrap": "~3.2.0",
-    "angular-ui-ace": "~0.1.1"
+    "angular-ui-ace": "~0.1.1",
+    "angular-dragdrop-ganarajpr": "~1.0.3"
   },
   "resolutions": {
     "d3": "~3.4.8",
