We can render up to n input ports now!

--- a/bower.json
+++ b/bower.json
@@ -48,7 +48,8 @@
   },
   "resolutions": {
     "d3": "~3.4.8",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "jquery-ui": "~1.10.4"
   },
   "devDependencies": {
     "chai": "~1.9.1",
