--- a/bower.json
+++ b/bower.json
@@ -44,7 +44,8 @@
     "socket.io-client": "~1.0.6",
     "bootstrap": "~3.2.0",
     "angular-ui-ace": "~0.1.1",
-    "angular-dragdrop-ganarajpr": "~1.0.3"
+    "angular-dragdrop-ganarajpr": "~1.0.3",
+    "node-uuid": "~1.4.1"
   },
   "resolutions": {
     "d3": "~3.4.8",
