--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "sinon-chai": "^2.5.0"
   },
   "scripts": {
-    "test": "mocha -r test/test_helper.js --recursive --reporter spec test/models test/controllers && node_modules/karma/bin/karma start --single-run",
+    "test": "NODE_ENV=test mocha -r test/test_helper.js --recursive --reporter spec test/models test/controllers && node_modules/karma/bin/karma start --single-run",
     "start": "node server.js"
   },
   "engines": {
