--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "karma-spec-reporter": "0.0.13",
     "shelljs": "^0.3.0",
     "sinon": "^1.10.3",
-    "sinon-chai": "^2.5.0"
+    "sinon-chai": "^2.5.0",
+    "casperjs": "~1.1.0-beta3"
   },
   "scripts": {
     "test": "NODE_ENV=test mocha -r test/test_helper.js --recursive --reporter spec test/models test/controllers && node_modules/karma/bin/karma start --single-run",
