--- a/bower.json
+++ b/bower.json
@@ -45,7 +45,8 @@
     "bootstrap": "~3.2.0",
     "angular-ui-ace": "~0.1.1",
     "angular-dragdrop-ganarajpr": "~1.0.3",
-    "node-uuid": "~1.4.1"
+    "node-uuid": "~1.4.1",
+    "async": "~0.9.0"
   },
   "resolutions": {
     "d3": "~3.4.8",
