--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,7 @@
     "jquery-ui": "~1.10.4",
     "angular-ui-router": "~0.2.10",
     "modernizr": "~2.8.2",
-    "fontawesome": "Font-Awesome#4.1.0",
+    "fontawesome": "~4.1",
     "angular-ui-utils": "~0.1.1",
     "d3": "~3.4.11",
     "jquery-migrate": "~1.2.1",
@@ -49,9 +49,7 @@
     "async": "~0.9.0"
   },
   "resolutions": {
-    "d3": "~3.4.8",
-    "jquery-ui": "~1.10.4",
-    "jquery": "~2.1.1"
+    "d3": "~3.4.8"
   },
   "devDependencies": {
     "chai": "~1.9.1",
