--- a/bower.json
+++ b/bower.json
@@ -49,7 +49,9 @@
     "async": "~0.9.0"
   },
   "resolutions": {
-    "d3": "~3.4.8"
+    "d3": "~3.4.8",
+    "jquery-ui": "~1.10.4",
+    "jquery": "~2.1.1"
   },
   "devDependencies": {
     "chai": "~1.9.1",
