--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "webdriverjs": "~1.7.4"
   },
   "scripts": {
-    "test": "NODE_ENV=test mocha -r test/test_helper.js --recursive --reporter spec test/models test/controllers && node_modules/karma/bin/karma start --single-run",
+    "test": "NODE_ENV=test mocha -r test/test_helper.js --recursive --reporter spec test/models test/controllers test/collections && node_modules/karma/bin/karma start --single-run",
     "start": "node server.js"
   },
   "engines": {
