--- a/bower.json
+++ b/bower.json
@@ -46,16 +46,20 @@
     "angular-ui-ace": "~0.1.1",
     "angular-dragdrop-ganarajpr": "~1.0.3",
     "node-uuid": "~1.4.1",
-    "async": "~0.9.0"
+    "async": "~0.9.0",
+    "mousetrap": "~1.4.6"
   },
   "resolutions": {
-    "d3": "~3.4.8",
-    "jquery-ui": "~1.10.4",
-    "jquery": "~2.1.1"
+    "d3": "~3.4.8"
   },
   "devDependencies": {
     "chai": "~1.9.1",
     "sinon-chai": "~2.5.0",
     "sinon": "~1.10.3"
+  },
+  "overrides": {
+    "elasticsearch": {
+      "main": "elasticsearch.angular.js"
+    }
   }
 }
