--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport-facebook": "^1.0.3",
     "passport-fitbit": "^0.1.2",
     "passport-foursquare": "^1.0.0",
+    "passport-github": "git://github.com/jaredhanson/passport-github.git",
     "passport-google-oauth": "^0.1.5",
     "passport-http-oauth": "~0.1.3",
     "passport-linkedin": "~0.1.3",
@@ -55,13 +56,14 @@
     "simple-oauth2": "~0.1.9",
     "skynet": "*",
     "underscore": "~1.6.0",
-    "when": "^3.0.1",
-    "passport-github": "git://github.com/jaredhanson/passport-github.git"
+    "when": "^3.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "casperjs": "~1.1.0-beta3",
     "chai": "^1.9.1",
     "gulp": "~3.8.6",
+    "gulp-bower": "0.0.6",
     "gulp-concat": "~2.3.3",
     "gulp-less": "~1.3.1",
     "gulp-plumber": "~0.6.4",
@@ -75,11 +77,11 @@
     "karma-phantomjs-launcher": "~0.1.4",
     "karma-sinon-chai": "^0.2.0",
     "karma-spec-reporter": "0.0.13",
+    "main-bower-files": "^1.0.4",
+    "selenium-webdriver": "~2.42.1",
     "shelljs": "^0.3.0",
     "sinon": "^1.10.3",
     "sinon-chai": "^2.5.0",
-    "casperjs": "~1.1.0-beta3",
-    "selenium-webdriver": "~2.42.1",
     "webdriverjs": "~1.7.4"
   },
   "scripts": {
