--- a/bower.json
+++ b/bower.json
@@ -47,6 +47,7 @@
     "angular-dragdrop-ganarajpr": "~1.0.3",
     "node-uuid": "~1.4.1",
     "async": "~0.9.0",
+    "mgo-mousetrap": "git://github.com/mgonto/mgo-mousetrap.git#~0.1.2",
     "mousetrap": "~1.4.6"
   },
   "resolutions": {
@@ -60,6 +61,12 @@
   "overrides": {
     "elasticsearch": {
       "main": "elasticsearch.angular.js"
+    },
+    "mousetrap": {
+      "main": "mousetrap.js"
+    },
+    "node-uuid": {
+      "main": "uuid.js"
     }
   }
 }
