--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
   bundler: true
   directories:
     - node_modules
+    - public/lib
 env: NODE_ENV=test
 before_deploy: "mkdir -p build && tar czf build/public.tar.gz public"
 deploy:
