--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,6 @@ deploy:
       secure: KOR29IukG7svfdwoHmPMUrAg+gO7NFmSX6Th6lbar6vPlQkFr59xtLFyMJE2LVYWS0CYPQPMhxSN1oFM+tnYoDNMAX31Q8ZC6theW4UbJIjrNBadzq8FH2OWTvFUHv2UGEcmndTBl+x4VW1wKwy72pAzQ6mCl2+B9viUYRbp7Tg=
     app-id: 42f87aa6-8b69-47d5-b2a3-dcc9511281be
     on:
-      repo: octoblu/octoblu
       branch: master
   - provider: opsworks
     access_key_id: AKIAJCOOWS3NWOOZRDGQ
@@ -36,7 +35,6 @@ deploy:
       secure: KOR29IukG7svfdwoHmPMUrAg+gO7NFmSX6Th6lbar6vPlQkFr59xtLFyMJE2LVYWS0CYPQPMhxSN1oFM+tnYoDNMAX31Q8ZC6theW4UbJIjrNBadzq8FH2OWTvFUHv2UGEcmndTBl+x4VW1wKwy72pAzQ6mCl2+B9viUYRbp7Tg=
     app-id: 6829c218-74d9-4ff4-a7dc-9b5f810a05fe
     on:
-      repo: octoblu/octoblu
       branch: master
   # staging
   - provider: s3
@@ -55,7 +53,6 @@ deploy:
       secure: KOR29IukG7svfdwoHmPMUrAg+gO7NFmSX6Th6lbar6vPlQkFr59xtLFyMJE2LVYWS0CYPQPMhxSN1oFM+tnYoDNMAX31Q8ZC6theW4UbJIjrNBadzq8FH2OWTvFUHv2UGEcmndTBl+x4VW1wKwy72pAzQ6mCl2+B9viUYRbp7Tg=
     app-id: 1d628748-95d0-45bf-be4e-bf9d53630243
     on:
-      repo: octoblu/octoblu
       branch: staging
   - provider: opsworks
     access_key_id: AKIAJCOOWS3NWOOZRDGQ
@@ -63,12 +60,11 @@ deploy:
       secure: KOR29IukG7svfdwoHmPMUrAg+gO7NFmSX6Th6lbar6vPlQkFr59xtLFyMJE2LVYWS0CYPQPMhxSN1oFM+tnYoDNMAX31Q8ZC6theW4UbJIjrNBadzq8FH2OWTvFUHv2UGEcmndTBl+x4VW1wKwy72pAzQ6mCl2+B9viUYRbp7Tg=
     app-id: dd136ea2-946d-4301-a74b-f19ea1ae2518
     on:
-      repo: octoblu/octoblu
       branch: staging
-
 branches:
   only:
     - master
     - staging
 before_script:
+  - node_modules/.bin/bower install
   - node_modules/.bin/gulp
