--- a/bower.json
+++ b/bower.json
@@ -58,7 +58,8 @@
   "devDependencies": {
     "chai": "~1.9.1",
     "sinon-chai": "~2.5.0",
-    "sinon": "~1.10.3"
+    "sinon": "~1.10.3",
+    "chai-as-promised": "~4.1.1"
   },
   "overrides": {
     "ace-builds": {
