--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "bower": "^1.3.3",
     "casperjs": "~1.1.0-beta3",
     "chai": "^1.9.1",
+    "errorhandler": "^1.1.1",
     "gulp": "~3.8.6",
     "gulp-bower": "0.0.6",
     "gulp-concat": "~2.3.3",
