--- a/.travis.yml
+++ b/.travis.yml
@@ -65,6 +65,7 @@ branches:
   only:
     - master
     - staging
+    - develop
 before_script:
   - node_modules/.bin/bower install
   - node_modules/.bin/gulp
