--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "should": "^3.3.1",
     "simple-oauth2": "~0.1.9",
     "skynet": "*",
+    "underscore": "~1.6.0",
     "when": "^3.0.1"
   },
   "devDependencies": {
