--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "simple-oauth2": "~0.2.0",
     "skynet": "*",
     "underscore": "~1.6.0",
-    "when": "^3.0.1"
+    "when": "^3.0.1",
+    "passport-dropbox-oauth2": "~0.1.6"
   },
   "devDependencies": {
     "bower": "^1.3.3",
