--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "skynet": "*",
     "underscore": "~1.6.0",
     "when": "^3.0.1",
-    "passport-dropbox-oauth2": "~0.1.6"
+    "passport-dropbox-oauth2": "~0.1.6",
+    "gulp-jsoncombine": "~1.0.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
