--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
     "errorhandler": "^1.1.1",
     "express": "~4.6.1",
     "express-session": "~1.6.5",
+    "gulp": "~3.8.6",
+    "gulp-bower": "0.0.6",
+    "gulp-concat": "~2.3.3",
+    "gulp-jsoncombine": "~1.0.0",
+    "gulp-less": "~1.3.1",
+    "gulp-plumber": "~0.6.4",
+    "gulp-sourcemaps": "~1.1.0",
     "jade": "^1.3.1",
     "lodash": "^2.4.1",
     "lodash-node": "~2.4.1",
@@ -58,20 +65,13 @@
     "skynet": "*",
     "underscore": "~1.6.0",
     "when": "^3.0.1",
-    "passport-dropbox-oauth2": "~0.1.6",
-    "gulp-jsoncombine": "~1.0.0"
+    "passport-dropbox-oauth2": "~0.1.6"
   },
   "devDependencies": {
     "bower": "^1.3.3",
     "casperjs": "~1.1.0-beta3",
     "chai": "^1.9.1",
     "errorhandler": "^1.1.1",
-    "gulp": "~3.8.6",
-    "gulp-bower": "0.0.6",
-    "gulp-concat": "~2.3.3",
-    "gulp-less": "~1.3.1",
-    "gulp-plumber": "~0.6.4",
-    "gulp-sourcemaps": "~1.1.0",
     "karma": "^0.12.19",
     "karma-blink1-reporter": "git://github.com/iamruinous/karma-blink1-reporter",
     "karma-growl-reporter": "~0.1.1",
