--- a/bower.json
+++ b/bower.json
@@ -48,7 +48,8 @@
     "async": "~0.9.0",
     "mgo-mousetrap": "git://github.com/mgonto/mgo-mousetrap.git#~0.1.2",
     "mousetrap": "~1.4.6",
-    "prism": "gh-pages"
+    "prism": "gh-pages",
+    "bcryptjs": "~2.0.2"
   },
   "resolutions": {
     "d3": "~3.4.8"
