--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "npm": "~1.4.19",
     "oauth": "~0.9.11",
     "passport": "~0.2.0",
+    "passport-appdotnet": "^0.1.1",
     "passport-bitly": "^0.1.0",
+    "passport-dropbox-oauth2": "~0.1.6",
     "passport-facebook": "^1.0.3",
     "passport-fitbit": "^0.1.2",
     "passport-foursquare": "^1.0.0",
@@ -65,8 +67,7 @@
     "simple-oauth2": "~0.2.0",
     "skynet": "*",
     "underscore": "~1.6.0",
-    "when": "^3.0.1",
-    "passport-dropbox-oauth2": "~0.1.6"
+    "when": "^3.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
