--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "passport-linkedin": "~0.1.3",
     "passport-local": "^0.1.6",
     "passport-oauth": "~1.0.0",
-    "passport-rdio": "~0.1.2",
+    "passport-rdio": "^0.1.2",
     "passport-readability": "~0.1.2",
     "passport-stackexchange": "~0.1.0",
     "passport-tumblr": "~0.1.2",
