--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "simple-oauth2": "~0.2.0",
     "skynet": "*",
     "underscore": "~1.6.0",
-    "when": "^3.0.1"
+    "when": "^3.0.1",
+    "passport-yahoo-oauth": "~0.1.2",
+    "passport-box": "~0.1.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
