--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "when": "^3.0.1",
     "passport-instagram": "~0.1.2",
     "passport-yahoo-oauth": "~0.1.2",
-    "passport-box": "~0.1.0"
+    "passport-box": "~0.1.0",
+    "passport-nest": "~1.0.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
