Add elastic search, scripts for channel processing

--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
     "sinon": "^1.10.3",
     "sinon-chai": "^2.5.0",
     "webdriverjs": "~1.7.4",
-    "karma-chai-plugins": "~0.2.3"
+    "karma-chai-plugins": "~0.2.3",
+    "commander": "~2.3.0"
   },
   "scripts": {
     "test": "NODE_ENV=test mocha -r test/test_helper.js --recursive --reporter spec test/models test/controllers test/collections && node_modules/karma/bin/karma start --single-run",
