--- a/bower.json
+++ b/bower.json
@@ -46,13 +46,15 @@
     "angular-dragdrop-ganarajpr": "~1.0.3",
     "node-uuid": "~1.4.1",
     "async": "~0.9.0",
-    "mgo-mousetrap": "git://github.com/mgonto/mgo-mousetrap.git#~0.1.2",
     "mousetrap": "~1.4.6",
     "prism": "gh-pages",
-    "xxhash": "*"
+    "xxhash": "*",
+    "mgo-mousetrap": "https://github.com/octoblu/mgo-mousetrap.git#0.1.5"
   },
   "resolutions": {
-    "d3": "~3.4.8"
+    "d3": "~3.4.8",
+    "jquery-ui": "~1.10.4",
+    "jquery": "~2.1.1"
   },
   "devDependencies": {
     "chai": "~1.9.1",
