--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "passport-instagram": "~0.1.2",
     "passport-yahoo-oauth": "~0.1.2",
     "passport-box": "~0.1.0",
-    "passport-nest": "~1.0.0"
+    "passport-nest": "~1.0.0",
+    "passport-linkedin-oauth2": "~1.1.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
