--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "passport-yahoo-oauth": "~0.1.2",
     "passport-box": "~0.1.0",
     "passport-nest": "~1.0.0",
-    "passport-linkedin-oauth2": "~1.1.1"
+    "passport-linkedin-oauth2": "~1.1.1",
+    "gulp-nodemon": "~1.0.4"
   },
   "devDependencies": {
     "bower": "^1.3.3",
