--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "safe_datejs": "~0.0.1",
     "should": "^3.3.1",
     "simple-oauth2": "~0.2.0",
-    "skynet": "*",
+    "skynet": "~1.1.0",
     "underscore": "~1.6.0",
     "when": "^3.0.1"
   },
