--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "simple-oauth2": "~0.2.0",
     "skynet": "~1.1.0",
     "underscore": "~1.6.0",
-    "when": "^3.0.1"
+    "when": "^3.0.1",
+    "passport-spotify": "~0.1.0"
   },
   "devDependencies": {
     "bower": "^1.3.3",
