--- a/.travis.yml
+++ b/.travis.yml
@@ -71,3 +71,5 @@ branches:
 before_script:
   - node_modules/.bin/bower install
   - node_modules/.bin/gulp
+after_success:
+  - gem install nokogiri -- --use-system-libraries
