--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "passport-dropbox-oauth2": "~0.1.6",
     "passport-facebook": "^1.0.3",
     "passport-fitbit": "^0.1.2",
+    "passport-forcedotcom": "~0.1.1",
     "passport-foursquare": "~1.0.0",
     "passport-github": "git://github.com/jaredhanson/passport-github.git",
     "passport-google-oauth": "^0.1.5",
@@ -59,6 +60,7 @@
     "passport-local": "^0.1.6",
     "passport-nest": "~1.0.0",
     "passport-oauth": "~1.0.0",
+    "passport-paypal": "^0.3.0",
     "passport-rdio": "^0.1.2",
     "passport-readability": "~0.1.2",
     "passport-sharefile": "^1.0.0",
@@ -70,7 +72,6 @@
     "passport-twitter": "~1.0.2",
     "passport-vimeo": "~0.1.2",
     "passport-yahoo-oauth": "~0.1.2",
-    "passport-forcedotcom": "~0.1.1",
     "q": "^1.0.1",
     "request": "*",
     "rest": "^1.0.3",
