Fix error on json-editor validator

--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,7 @@
     "d3": "~3.4.11",
     "jquery-migrate": "~1.2.1",
     "angular-bootstrap": "~0.11.0",
-    "json-editor": "~0.7.9",
+    "json-editor": "~0.7.12",
     "elastic.js": "~1.1.1",
     "elasticsearch": "~2.2.0",
     "smoothie": "https://github.com/joewalnes/smoothie.git",
@@ -53,7 +53,8 @@
   },
   "resolutions": {
     "d3": "~3.4.8",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "jquery-ui": "~1.10.4"
   },
   "devDependencies": {
     "chai": "~1.9.1",
