--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "main-bower-files": "^2.0.0",
     "marked": "*",
     "moment": "2.5.1",
-    "mongojs": "^0.10.1",
+    "mongojs": "^0.15.1",
     "mongoose": "~3.8.12",
     "mongoose-pagination": "~1.0.0",
     "mongoose-slug": "^1.2.0",
@@ -90,7 +90,8 @@
     "simple-oauth2": "~0.2.0",
     "skynet": "1.4.0",
     "underscore": "~1.6.0",
-    "when": "^3.0.1"
+    "when": "^3.0.1",
+    "nedb": "~0.11.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
