add copy to clipboard

--- a/bower.json
+++ b/bower.json
@@ -50,7 +50,9 @@
     "prism": "gh-pages",
     "xxhash": "*",
     "mgo-mousetrap": "https://github.com/octoblu/mgo-mousetrap.git#0.1.5",
-    "angular-material": "master"
+    "angular-material": "master",
+    "zeroclipboard": "~2.1.6",
+    "ng-clip": "~0.2.4"
   },
   "devDependencies": {
     "chai": "~1.9.1",
