--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "safe_datejs": "~0.0.1",
     "should": "^3.3.1",
     "simple-oauth2": "~0.2.0",
-    "meshblu": "^1.8.3",
+    "skynet": "^1.8.3",
     "underscore": "~1.6.0",
     "when": "^3.0.1"
   },
